Minor path fixes

--- a/TradingEngineServer/appsettings.json
+++ b/TradingEngineServer/appsettings.json
@@ -2,7 +2,7 @@
   "LoggerConfiguration": {
     "LoggerType": "Text",
     "TextLoggerConfiguration": {
-      "Directory": "D:\\trading-engine\\logs",
+      "Directory": "D:\\trading-engine-server\\logs",
       "Filename": "TradingEngineServer",
       "FileExtension": ".log"
     }
