--- a/TradingEngineServer/TradingEngineServer.csproj
+++ b/TradingEngineServer/TradingEngineServer.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LoggingCS\LoggingCS\LoggingCS.csproj" />
+    <ProjectReference Include="..\LoggingCS\LoggingCS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
